Open Cl Kernel Warnings #47100

Closed
opened 2016-01-01 05:48:04 +01:00 by Aaron Carlisle · 8 comments
Member

System Information
Windows 10
Intel HD 4600
system-info.txt

Blender Version
Broken: 2.76.5 5e974a3

Short description of error
When Using CPU kernel I get these errors:

Compiling OpenCL kernel ...
Build flags: -D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAK
ING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_shader> was not vectorized
Kernel <kernel_ocl_bake> was not vectorized
Kernel <kernel_ocl_convert_to_byte> was successfully vectorized (8)
Kernel <kernel_ocl_convert_to_half_float> was successfully vectorized (8)
Done.
Kernel compilation finished in 3.20s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI
ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_data_init> was not vectorized
Done.
Kernel compilation finished in 3.25s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI
ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_scene_intersect> was not vectorized
Done.
Kernel compilation finished in 3.18s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI
ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_lamp_emission> was not vectorized
Done.
Kernel compilation finished in 5.05s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI
ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_queue_enqueue> was successfully vectorized (8)
Done.
Kernel compilation finished in 0.15s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI
ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_background_buffer_update> was not vectorized
Done.
Kernel compilation finished in 5.11s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI
ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_shader_eval> was not vectorized
Done.
Kernel compilation finished in 5.04s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_
_NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_holdout_emission_blurring_pathtermination_ao> was not vectorized
Done.
Kernel compilation finished in 3.18s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_
_NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_direct_lighting> was not vectorized
Done.
Kernel compilation finished in 5.24s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_
_NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_shadow_blocked> was not vectorized
Done.
Kernel compilation finished in 5.13s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_
_NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_next_iteration_setup> was not vectorized
Done.
Kernel compilation finished in 3.41s.
Compiling OpenCL kernel ...
Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_
_NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__
OpenCL kernel build output:
Compilation started
<built-in>:4:27: warning: ISO C99 requires whitespace after the macro name
Compilation done
Linking started
Linking done
Device build started
Device build done
Kernel <kernel_ocl_path_trace_sum_all_radiance> was not vectorized
Done.
Kernel compilation finished in 0.11s.
read exr tmp file: C:\Users\Aaron\AppData\Local\Temp\blender_a06072\_Scene_RenderLayer.exr

Exact steps for others to reproduce the error

Render Cube with CPU OpenCL kernel

Note:

I realize that this is not officially supported however I think the the white space errors are a recent regression. I don't know about the was not vectorized

**System Information** Windows 10 Intel HD 4600 [system-info.txt](https://archive.blender.org/developer/F271182/system-info.txt) **Blender Version** Broken: 2.76.5 5e974a3 **Short description of error** When Using CPU kernel I get these errors: ``` Compiling OpenCL kernel ... Build flags: -D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAK ING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_shader> was not vectorized Kernel <kernel_ocl_bake> was not vectorized Kernel <kernel_ocl_convert_to_byte> was successfully vectorized (8) Kernel <kernel_ocl_convert_to_half_float> was successfully vectorized (8) Done. Kernel compilation finished in 3.20s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_data_init> was not vectorized Done. Kernel compilation finished in 3.25s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_scene_intersect> was not vectorized Done. Kernel compilation finished in 3.18s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_lamp_emission> was not vectorized Done. Kernel compilation finished in 5.05s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_queue_enqueue> was successfully vectorized (8) Done. Kernel compilation finished in 0.15s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_background_buffer_update> was not vectorized Done. Kernel compilation finished in 5.11s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTI ON__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D__NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_shader_eval> was not vectorized Done. Kernel compilation finished in 5.04s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_ _NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_holdout_emission_blurring_pathtermination_ao> was not vectorized Done. Kernel compilation finished in 3.18s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_ _NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_direct_lighting> was not vectorized Done. Kernel compilation finished in 5.24s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_ _NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_shadow_blocked> was not vectorized Done. Kernel compilation finished in 5.13s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_ _NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_next_iteration_setup> was not vectorized Done. Kernel compilation finished in 3.41s. Compiling OpenCL kernel ... Build flags: -D__SPLIT_KERNEL__ -D__WORK_STEALING__-D__NODES_MAX_GROUP__=0 -D__NODES_FEATURES__=0 -D__MAX_CLOSURE__=1 -D__NO_HAIR__ -D__NO_OBJECT_MOTION__ -D__NO_CAMERA_MOTION__ -D__NO_BAKING__ -D_ _NO_SUBSURFACE__ -D__NO_BRANCHED_PATH__ OpenCL kernel build output: Compilation started <built-in>:4:27: warning: ISO C99 requires whitespace after the macro name Compilation done Linking started Linking done Device build started Device build done Kernel <kernel_ocl_path_trace_sum_all_radiance> was not vectorized Done. Kernel compilation finished in 0.11s. read exr tmp file: C:\Users\Aaron\AppData\Local\Temp\blender_a06072\_Scene_RenderLayer.exr ``` **Exact steps for others to reproduce the error** Render Cube with CPU OpenCL kernel >Note: > >I realize that this is not officially supported however I think the the white space errors are a recent regression. I don't know about the was not vectorized
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Sergey Sharybin was assigned by Aaron Carlisle 2016-01-01 05:48:04 +01:00
Author
Member

Added subscriber: @Blendify

Added subscriber: @Blendify

Added subscriber: @ThomasDinges

Added subscriber: @ThomasDinges

Well, these are warnings and infos, not actual errors. :)

Well, these are warnings and infos, not actual errors. :)
Aaron Carlisle changed title from Open Cl Kernel Errors to Open Cl Kernel Warnings 2016-01-01 18:18:18 +01:00

Vectorization messages are totally harmless, it is just some verbose statistics from Intel OpenCL driver which might compile special kernel version using CPU vectorization instructions together with GPU instructions in order to improve performance of small kernels. In the future when OpenCL considered totally stable we can make output less verbose, but currently it worth having more verbose output.

For for warning about preprocessor define value will go to git now.

Vectorization messages are totally harmless, it is just some verbose statistics from Intel OpenCL driver which might compile special kernel version using CPU vectorization instructions together with GPU instructions in order to improve performance of small kernels. In the future when OpenCL considered totally stable we can make output less verbose, but currently it worth having more verbose output. For for warning about preprocessor define value will go to git now.

This issue was referenced by da49ee30b0

This issue was referenced by da49ee30b00575ce34e2e63219f08abc11ed75f8

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

This issue was referenced by blender/cycles@823e53343e

This issue was referenced by blender/cycles@823e53343e205b5bdcbc7db82327901bd5854f87
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47100
No description provided.