Fix T47100: OpenCL compilation warnings due to missing space in the argument list